# jplan

./: README.md  pyproject.toml
src/: __init__.py  cli.py  cron.py  executor.py
