[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jplan"
version = "0.1.0"
description = "A command-line tool to schedule and execute Jupyter notebooks using cron"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["jupyter", "notebook", "cron", "scheduling", "papermill"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "papermill>=2.4.0",
    "jupyter>=1.0.0",
]

[project.scripts]
jplan = "src.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/jplan"
Documentation = "https://github.com/yourusername/jplan#readme"
Repository = "https://github.com/yourusername/jplan.git"
Issues = "https://github.com/yourusername/jplan/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.hooks.custom]
path = "build.py"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88 